# RUST-fundamental

./: .gitignore  LICENSE  README.md
day-1/: Cargo.toml
day-1/src/: main.rs
day-1/src/modules/: utils.rs
day-2/: Cargo.toml
day-2/src/: main.rs
day-2/src/modules/utils/: api.rs  console.rs  loader.rs
