[package]
name = "cuyshort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serde_derive = "1.0.155"
clap = { version = "4.1.8", features = ["derive"] }
indicatif = "0.17.3"
dotenv = "0.15.0"